<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SP Note</string>
    <string name="notebook">NoteBook</string>
    <string name="folder_name">Folder name</string>
    <string name="note_name">Note name</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps" tools:ignore="ButtonCase">CANCEL</string>
    <string name="ok">OK</string>
    <string name="choose_background_image">Choose background image</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="edit_cover">Edit cover</string>
    <string name="text_style_text">A</string>
    <string name="type_mode">Text</string>
    <string name="drawing">Draw</string>
    <string name="text_style">Text Style</string>
    <string name="color">Color</string>
    <string name="pen_thickness">Pen Thickness</string>
    <string name="no_note_availabe">There is no note available!</string>
    <string name="tap_plus_to_new_note">Tap on “+” to add new note.</string>
    <string name="paper_style">Paper Style</string>
    <string name="save">Save</string>
    <string name="save_caps">SAVE</string>
    <string name="discard">Discard</string>

    <string name="folder_pages_count">%1$d pages</string>
    <string name="move_note_to">move %1$s to</string>

    <string name="simple">Simple</string>
    <string name="line">Line</string>
    <string name="grid">Grid</string>
    <string name="open">Open</string>
    <string name="move">Move</string>
    <string name="remove">Remove</string>

    <string name="done">DONE</string>
    <string name="some_error">Some error occurred!</string>
    <string name="select_text">First select text</string>
    <string name="discard_message">Your changes are not saved are you sure you want to discard the changes?</string>
    <string name="remove_note">Are you sure you want to delete this note?</string>
    <string name="remove_folder">Are you sure you want to delete this folder and its contents?</string>
    <string name="enter_new_name">Enter the note name</string>
    <string name="my_note">mynote</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_save_changes">Do you want to save changes?</string>
    <string name="this_folder_is_empty">This folder is empty</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="my_folder">my folder</string>
    <string name="create_caps">CREATE</string>
    <string name="exist_note_name">File is exist, choose another name</string>
    <string name="speak">Speak…</string>

    // NEW STRINGS
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_bookmark">Bookmarks</string>
    <string name="bottom_nav_setting">Settings</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear search</string>
    <string name="search_placeholder">Search for notes</string>

    <string name="new_note">New Note</string>

    <string name="content_description_back">Back to previous screen</string>
</resources>
