<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_name"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_new_name"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/my_note"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/secondaryText"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancelSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/more_action_bottom_sheet_selector"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/more_action_bottom_sheet_selector"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="" />

    </LinearLayout>
</LinearLayout>