<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discard_message"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancelDiscardChanges"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/more_action_bottom_sheet_selector"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDiscardChanges"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/more_action_bottom_sheet_selector"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="" />

    </LinearLayout>

</LinearLayout>